--- a/FASHION/fashionn.html
+++ b/FASHION/fashionn.html
@@ -43,7 +43,7 @@
         <center><h1 style="background-color:powderblue;font-family: Console;"> SELECT YOUR OPTIONS</h1></center>
             <div class="row">
                 
-                <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
+                <div class="col col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
 
                     <div class="card" >
                         <img src="https://wallpaperaccess.com/full/3046105.jpg" height="300" class="card-img-top" alt="...">
@@ -55,7 +55,7 @@
                       </div>
 
                 </div>
-                <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
+                <div class="col col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
 
                     <div class="card" >
                         <img src="https://static3.azafashions.com/uploads/product_gallery/dr-m20-azon-01-0706257001603950485.jpg" height="300" class="card-img-top" alt="...">
@@ -67,7 +67,7 @@
                       </div>
 
                 </div>
-                <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
+                <div class="col col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
 
                     <div class="card" >
                         <img src="https://www.brides.com/thmb/HjtthT0SHc31a8JM1WtT9-aa0YY=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/20.11.23-NatashaDalal_197-0c2994516ffa43fab14066250b4b2389.jpg" height="300" class="card-img-top" alt="...">
@@ -79,19 +79,19 @@
                       </div>
 
                 </div>
-                <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
+                <div class="col col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
 
                     <div class="card" >
                         <img src="https://prod-img.thesouledstore.com/public/theSoul/uploads/catalog/product/1675165395_5037288.jpg" height="300" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">T-SHIRTS</h5>
                           <p class="card-text"></p>
-                          <a href="#" class="btn btn-primary">CLICK HERE</a>
+                          <a href="" class="btn btn-primary">CLICK HERE</a>
                         </div>
                       </div>
 
                 </div>
-                <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
+                <div class="col col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
 
                     <div class="card" >
                         <img src="https://wallpapercave.com/wp/wp4329529.jpg" height="300" class="card-img-top" alt="...">
@@ -103,7 +103,7 @@
                       </div>
 
                 </div>
-                <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
+                <div class="col col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3">
 
                     <div class="card" >
                         <img src="https://i.pinimg.com/originals/9b/ac/b5/9bacb51273718a8a7bd66f002307481d.jpg" height="300" class="card-img-top" alt="...">
