--- a/T-SHIRTS/tshirt.html
+++ b/T-SHIRTS/tshirt.html
@@ -9,8 +9,8 @@
     <title>Document</title>
 </head>
 
-<body style="background-color:black">
-    <center><h1 style="background-color:powderblue;font-family: Console;">TSHIRTS</h1></center>><BR>
+<body >
+    <center><h1 style="background-color:white;font-family: Console;">TSHIRTS</h1></center>><BR>
     <div class="container">
         <div class="row GT-6">
             <BR>
@@ -28,7 +28,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div><br>
                     <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
                         <div class="card" >
@@ -41,7 +41,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div><br>
                     <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
                         <div class="card" >
@@ -54,7 +54,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div><br>
                     <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
                         <div class="card" >
@@ -67,7 +67,7 @@
                         </div>
                     </div>
 
-                    </div>
+                    </div><br>
                     <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
                         <div class="card" >
@@ -80,7 +80,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div><br>
                     <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
                         <div class="card" >
@@ -94,7 +94,7 @@
                         </div>
 
 
-                    </div>
+                    </div><br>
                     <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
                         <div class="card" >
@@ -107,7 +107,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div><br>
                     <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3"></div>
                 </div>
             </div>
