--- a/Anime Fair/anime.html
+++ b/Anime Fair/anime.html
@@ -10,8 +10,8 @@
     <title>Document</title>
 </head>
 
-<body color:black">style="background-
-<center><h1 style="background-color:powderblue;font-family: Console;">ANIME</h1></center>
+<body style="background-color:black;">
+<center><h1 style="background-color:whitesmoke;font-family: Console;">ANIME</h1></center>
     <div class="container">
         <div class="row gt-5">
             <div class="col col-12 col-sm-12 col-md 12 col-lg-12 col-xl-12 col-xxl-12">
@@ -19,17 +19,17 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://dailyanimeart.files.wordpress.com/2011/08/one_piece__one_photo_xdd_by_junefeier-d3mt6d1.jpg?w=1112" height="600"
+                            <img src="https://wallpapercave.com/wp/wp2900137.jpg" height="600"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://wallpapercave.com/wp/MHEmKiH.jpg"  height="600" class="d-block w-100" alt="...">
+                            <img src="https://wallpapercave.com/wp/MHEmKiH.jpg"  height="600"  width="500"class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://wallpapercave.com/wp/wp6097787.jpg" height="600" class="d-block w-100" alt="...">
+                            <img src="https://wallpapercave.com/wp/wp6097787.jpg" height="600" width="500" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://wallpapercave.com/wp/wp2405331.png" height="600" class="d-block w-100" alt="...">
+                            <img src="https://wallpapercave.com/wp/wp2405331.png" height="600" width="500" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
@@ -46,12 +46,12 @@
 <br>
             </div>
             <!-- second row -->
-            <center><h1 style="background-color:powderblue;font-family: Console;">SELECT ANIME</h1></center>
+            <center><h1 style="background-color:whitesmoke;font-family: Console;">WATCH NOW</h1></center>
             <br>
             <div class="row gt-5">
                 <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
-                    <div class="card" >
+                    <div class="card" style="background-color:black;color:white;" >
                         <img src="https://wallpapercave.com/wp/MHEmKiH.jpg" height="300" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL</h5>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
-                    <div class="card" >
+                    <div class="card"  style="background-color:black;color:white;">
                         <img src="https://dailyanimeart.files.wordpress.com/2011/08/one_piece__one_photo_xdd_by_junefeier-d3mt6d1.jpg?w=1112" height="300"class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">ONE PIECE</h5>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
-                    <div class="card" >
+                    <div class="card" style="background-color:black;color:white;">
                         <img src="https://wallpapercave.com/wp/wp6097787.jpg" height="300" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">MY HERO ACADEMIA</h5>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
-                    <div class="card" >
+                    <div class="card" style="background-color:black;color:white;" >
                         <img src="https://wallpapercave.com/wp/wp2405331.png" height="300" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">ONE PUNCH MAN</h5>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
-                    <div class="card" >
+                    <div class="card" style="background-color:black;color:white;">
                         <img src="https://images7.alphacoders.com/988/988814.jpg" height="300" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">NARUTO</h5>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
-                    <div class="card" >
+                    <div class="card" style="background-color:black;color:white;">
                         <img src="https://wallpaperaccess.com/full/388561.jpg" height="300" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">ATTACK ON TITAN</h5>
@@ -122,9 +122,32 @@
 
                 </div>
                
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
+
+                    <div class="card" style="background-color:black;color:white;">
+                        <img src="https://wallpaperaccess.com/full/241367.jpg" height="300" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">DEATH NOTE</h5>
+                            <p class="card-text">RATING : 8.9</p>
+                            <a href="#" class="btn btn-primary">CLICK HERE</a>
+                        </div>
+                    </div>
+
+                </div>
 
 
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
+                    <div class="card" style="background-color:black;color:white;">
+                        <img src="https://images.alphacoders.com/106/thumb-1920-1065299.jpg" height="300" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">CLASSROOM OF ELITE</h5>
+                            <p class="card-text">RATING : 8.9</p>
+                            <a href="#" class="btn btn-primary">CLICK HERE</a>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
